--- a/lecture_2.7/CustomMetadataTypeManagerTest.cls
+++ b/lecture_2.7/CustomMetadataTypeManagerTest.cls
@@ -1,10 +1,14 @@
 @IsTest
 public class CustomMetadataTypeManagerTest {
     
+    @TestVisible
+    private static final String CUSTOM_METADATA_TYPE_NAME = 'Send_Email__mdt';
+    
     @IsTest
-    static void testGetRecords() {
-        String customMetadataTypeName = 'Send_Email__mdt';
-        List<SObject> records = CustomMetadataTypeManager.getRecords(customMetadataTypeName);
+    private static void getRecords_Test() {
+        List<SObject> records = CustomMetadataTypeManager.getRecords(CUSTOM_METADATA_TYPE_NAME);
+        
+        System.assertNotEquals(null, records);
         System.assertEquals(1, records.size());
     }
 }
