--- a/lecture_2.7/FlightTriggerTest.cls
+++ b/lecture_2.7/FlightTriggerTest.cls
@@ -1,34 +1,47 @@
 @IsTest
 public class FlightTriggerTest {
     
+    @TestVisible
+    private static final String birthdayTorist = '2020-03-03';
+    private static final Integer minAgeError = 3;
+    private static final Integer minAge = 1;
+    private static final String startDate = '2021-08-09';
+    private static final String startDateError = '2019-08-09';
+    
     @IsTest
-    static void testOnBeforeInsertErrorAge() {
-        Flight__c[] flight = TestDataFactory.createFlight('2020-03-03', 3, '2021-08-09', 'Accepted');
+    private static void onBeforeInsert_ErrorAge_Test() {
+        Flight__c[] flight = TestDataFactory.createFlight(birthdayTorist, minAgeError, startDate, Constants.FLIGHT_STATUS_ACCEPTED);
+        
         Test.startTest();
-        Database.SaveResult[] result = Database.insert(flight, false);
+        	Database.SaveResult[] result = Database.insert(flight, false);
         Test.stopTest();
-        System.assert(!result[0].isSuccess());
-        System.assert(result[0].getErrors().size() > 0);
-        System.assertEquals('Not suitable for age.', result[0].getErrors()[0].getMessage());
+        
+        System.assertEquals(false, result[0].isSuccess());
+        System.assertEquals(true, result[0].getErrors().size() > 0);
+        System.assertEquals(Constants.ERROR_AGE, result[0].getErrors()[0].getMessage());
     }
     
     @IsTest
-    static void testOnBeforeInsertErrorFlewAway() { 
-        Flight__c[] flight = TestDataFactory.createFlight('2020-03-03', 1, '2019-08-09', 'Accepted');
+    private static void onBeforeInsert_ErrorFlewAway_Test() { 
+        Flight__c[] flight = TestDataFactory.createFlight(birthdayTorist, minAge, startDateError, Constants.FLIGHT_STATUS_ACCEPTED);
+        
         Test.startTest();
-        Database.SaveResult[] result = Database.insert(flight, false);
+        	Database.SaveResult[] result = Database.insert(flight, false);
         Test.stopTest();
+        
         System.assert(!result[0].isSuccess());
         System.assert(result[0].getErrors().size() > 0);
-        System.assertEquals('Already flew away.', result[0].getErrors()[0].getMessage());
+        System.assertEquals(Constants.ERROR_DATE, result[0].getErrors()[0].getMessage());
     }
     
     @IsTest
-    static void testOnBeforeInsertSuccess() { 
-        Flight__c[] flight = TestDataFactory.createFlight('2020-03-03', 1, '2022-08-09', 'Accepted');
+    private static void onBeforeInsert_Success_Test() { 
+        Flight__c[] flight = TestDataFactory.createFlight(birthdayTorist, minAge, startDate, Constants.FLIGHT_STATUS_ACCEPTED);
+        
         Test.startTest();
-        Database.SaveResult[] result = Database.insert(flight, false);
+        	Database.SaveResult[] result = Database.insert(flight, false);
         Test.stopTest();
+        
         System.assert(result[0].isSuccess());
         System.assertEquals(0, result[0].getErrors().size());
     }
