--- a/lecture_2.7/TouristServiceTest.cls
+++ b/lecture_2.7/TouristServiceTest.cls
@@ -7,15 +7,30 @@ public class TouristServiceTest {
     }
         
     @IsTest
-    static void testMarkDuplicates() {
-        TouristService.markDuplicates(null);
-        System.assertEquals(0, 0);
+    private static void markDuplicates_Null_Test() {
+        Test.startTest();
+        	TouristService.markDuplicates(null);
+        Test.stopTest();
+        
+        List<Tourist__c> tourisDuplicates = TestDataFactory.getTouristsIsDuplicate();
+        
+        System.assertEquals(true, tourisDuplicates.isEmpty());
+        System.assertEquals(0, tourisDuplicates.size());
+    }
+    
+    @IsTest
+    private static void markDuplicates_Ssuccess_Test() {
         List<Tourist__c> tourists = TestDataFactory.createTourist();
         Set<Id> touristsIds = new Set<Id> {tourists[0].Id};
+            
         Test.startTest(); 
-        TouristService.markDuplicates(touristsIds);
+        	TouristService.markDuplicates(touristsIds);
         Test.stopTest();
+        
         List<Tourist__c> tourisDuplicates = TestDataFactory.getTouristsIsDuplicate();
+        
+        System.assertEquals(false, tourisDuplicates.isEmpty());
         System.assertEquals(1, tourisDuplicates.size());
+        System.assertEquals(tourists[0].Id, tourisDuplicates[0].Id);
     }
 }
