--- a/lecture_2.7/WeatherForecastServiceMock.cls
+++ b/lecture_2.7/WeatherForecastServiceMock.cls
@@ -5,7 +5,7 @@ global class WeatherForecastServiceMock implements HttpCalloutMock {
         HttpResponse response = new HttpResponse();
         response.setHeader('Content-Type', 'application/json');
         response.setBody('{"data":[{"valid_date":"2021-06-01", "temp":11.2}] }');
-        response.setStatusCode(200);
+        response.setStatusCode(Constants.RESPONSE_STATUS_CODE_200);
         return response; 
     }
 }
