--- a/lecture_3.5/class/TouristRegistrationController.cls
+++ b/lecture_3.5/class/TouristRegistrationController.cls
@@ -1,6 +1,6 @@
 public inherited sharing class TouristRegistrationController {
     
-    @AuraEnabled
+    @AuraEnabled(cacheable=true)
     public static List<Tourist__c> getTourists(Id tripId, Integer recordLimit, Integer recordOffset) {
         Integer intLimit = Integer.valueof(recordLimit);
         Integer intOffset = Integer.valueof(recordOffset);
@@ -9,7 +9,7 @@ public inherited sharing class TouristRegistrationController {
         return tourists;
     }
     
-    @AuraEnabled
+    @AuraEnabled(cacheable=true)
     public static Integer getTotalNumTourists(Id tripId) {
         Trip__c trip = TripManager.getTrip(tripId);
         Integer numTourists = TouristManager.getTotalNumTourists(tripId, trip); 
